diesel-builders-macros/tests/ui/fail/derive_table_model_no_diesel_attr.rs
// Test that TableModel derive fails without diesel attribute

use diesel_builders_macros::TableModel;

#[derive(TableModel)]
struct User {
    id: i32,
    name: String,
}

fn main() {}
